gem2deb (0.25.3) UNRELEASED; urgency=medium

  * dh_ruby: consider gemspec.bindir for installing executables.

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 15 Feb 2016 15:45:31 -0200

gem2deb (0.25.2) unstable; urgency=medium

  * gem2deb-test-runner: put directories under debian/ first in GEM_PATH to
    make sure dependency resolution uses the metadata installed during the
    build with precedence over metadata already installed in the system. Fixes
    building packages on non-clean systems where the package you are building
    may have a version already installed.
  * dh_ruby --gem-install:
    - handle not installing test files when they are explicitly listed in the
      gemspec under `spec.test_files = ...`.

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 14 Feb 2016 13:42:40 -0200

gem2deb (0.25.1) unstable; urgency=medium

  * gem2deb, gem2deb-test-runner: add dependency on rake since we now call
    `rake` explicitly (Closes: #812580).

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 25 Jan 2016 08:41:39 -0200

gem2deb (0.25) unstable; urgency=medium

  * debian/control: switch from git:// to https:// in Vcs-Git:
  * dh-make-ruby: stop creating debian/ruby-test-files.yaml. In my experience
    that almost never works out of the box.
    - Note that dh_ruby still supports it, we just won't autogenerate that
      when creating new packaging from scratch anymore.
  * gem2deb-test-runner: also set GEM_PATH when running tests. This makes
    tests work out of the box when using --gem-install
  * dh_ruby --gem-install:
    - Only install files that match a whitelist, to avoid having all the
      clutter that usually comes in source packages installed to binary
      packages.
    - Implement correct installation of native extensions

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 23 Jan 2016 17:23:22 -0200

gem2deb (0.24) experimental; urgency=medium

  * gem installer: avoid installing the debian/ directory when upstream