@@ -12,6 +12,6 @@ Gem::Specification.new do |spec|
 
   spec.files         = Dir.glob('**/*')
   spec.bindir        = "exe"
-  spec.executables   = spec.files.grep(%r{^exe/}) { |f| File.basename(f) }
+  spec.executables   = %w(altbindir)
   spec.require_paths = ["lib"]
 end
